Controlled alignfull padding differently to correct paragraph padding in certain situations.

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -70,8 +70,8 @@ img {
 .site-header,
 .post-header,
 .page-content,
-[data-align="full"] p,
-.alignfull p {
+[data-align="full"] .wp-block-group,
+.wp-block-group.alignfull {
 	padding-left: var(--wp--custom--post-content--padding--left);
 	padding-right: var(--wp--custom--post-content--padding--right);
 }
