--- a/blockbase/sass/base/_alignment.scss
+++ b/blockbase/sass/base/_alignment.scss
@@ -15,8 +15,8 @@
 .site-header,
 .post-header,
 .page-content,
-[data-align="full"] p,
-.alignfull p {
+[data-align="full"] .wp-block-group,
+.wp-block-group.alignfull {
 	padding-left: var(--wp--custom--post-content--padding--left);
 	padding-right: var(--wp--custom--post-content--padding--right);
 }
